[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nl-map-search"
version = "0.1.5"
description = "MCP server providing Naver Open APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "xmltodict>=0.14.2",
    "geopy>=2.4.0",
    "folium>=0.15.0",
    "python-dotenv>=1.0.0",
    "pandas>=1.5.0",
]
authors = []

[project.urls]
original = "https://github.com/pfldy2850/py-mcp-naver.git"

[project.scripts]
nl_map_search = "server:mcp.run"

[tool.hatch.build.targets.wheel]
include = ["server.py"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "ruff>=0.11.2",
    "twine>=6.1.0",
]
